--- a/examples/docker/Dockerfile
+++ b/examples/docker/Dockerfile
@@ -6,4 +6,5 @@ RUN pip install mlflow>=1.0 \
     && pip install scipy \
     && pip install pandas==0.22.0 \
     && pip install scikit-learn==0.19.1 \
-    && pip install cloudpickle
+    && pip install cloudpickle \
+    && pip install boto3
